ibm-ace-dashboard/ingress-web.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-dashboard-01-web-https
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "4096m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dashboard-01.vn
  rules:
  - host: dashboard-01.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ace-dashboard-01-dash
            port:
              number: 8300
